# markov-hedge-fund-method

./: README.md  ethusdt_finetune_sweep.py  markov-hedge-fund-method.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
config/: trading_hub_universe.yaml
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
pine-script/: markov-hedge-fund-method.pine
research/: adx_regime_hybrid_sweep.py  btc_breakout_sweep.py  bybit_intraday_strategy_sprint.py  bybit_l2_feature_prototype.py  eth_finetune_sweep.py  eth_refined_sweep.py  hft_evaluation_framework.md  nasdaq_combo_fib_liquidity_sweep.py  pairs_trading_sweep.py  zscore_adaptive_sweep.py
sketches/: index.html
skills/regime/: SKILL.md
tests/: test_backtest_runner.py  test_bollinger_vwap_momentum.py  test_bybit_l2_feature_prototype.py  test_bybit_public_collector.py  test_combination_runner.py  test_combo_comparison_report.py  test_combo_fib_liquidity_adapter.py  test_combo_fib_liquidity_backtest.py  test_combo_signal.py  test_cost_model.py  test_go_no_go_gate.py  test_hft_evaluator.py  test_intraday_markov_gate.py  test_ledger.py  test_parameter_sweep.py  test_pit_data_pipeline.py  test_sweeps.py  test_trading_hub_config.py  test_vwap_volume_reversion.py  test_vwap_volume_rsi_reversion.py
trading_hub/: __init__.py  backtest_report.py  backtest_runner.py  bybit_public_collector.py  combination_runner.py  combo_comparison_report.py  combo_signal.py  costs.py  go_no_go_gate.py  hft_evaluator.py  ledger.py  parameter_sweep.py  vwap_volume_reversion_backtest.py  (+1 more)
(+94 files in other folders)
